--- a/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
+++ b/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
@@ -48,10 +48,10 @@ image::images/arch.png[integration, role="integr8ly-img-responsive"]
 * link:https://blog.openshift.com/[OpenShift Blog, window="_blank"]
 ****
 
-[type=walkthroughResource,serviceName=3scale]
+[type=walkthroughResource,serviceName=sso]
 .{customer-sso-name}
 ****
-* link:{sso-realm-url}[Shared SSO Realm, window="_blank"]
+* link:{sso-realm-url}[Console, window="_blank"]
 * link:https://access.redhat.com/products/red-hat-single-sign-on/[Red Hat Single Sign-On Overview, window="_blank"]
 ****
 
@@ -160,7 +160,7 @@ The *{create-messages-app}* is run from a Node.js server, so the Node.js
 demonstrate how to include a configuration and enable the adapter.
 
 
-. Navigate to the link:{sso-realm-url}[SSO Realm, window="_blank"].
+. Go to link:{sso-realm-url}[SSO Realm, window="_blank"].
 . Enter the username `{shared-realm-username}` and password `password` if prompted.
 . Select *Clients* from the side menu.
 . Click the `{client-name}` client that was created earlier.
